--- a/online-help-96-97/concept_snapshot_policies.adoc
+++ b/online-help-96-97/concept_snapshot_policies.adoc
@@ -10,3 +10,19 @@ summary: "You can use System Manager to create and manage Snapshot policies in y
 
 [.lead]
 You can use System Manager to create and manage Snapshot policies in your storage system.
+
+== Create Snapshot policies
+
+You can create a Snapshot policy in System Manager to specify the maximum number of Snapshot copies that can be automatically created and the frequency of creating them.
+
+.Steps
+
+. Click *Protection* > *Snapshot Policies*.
+. Click *Create*.
+. In the *Create Snapshot Policy* dialog box, specify the policy name.
+. Click *Add*, and then specify the schedule name, the maximum number of Snapshot copies that you want to retain, and the SnapMirror label name.
++
+The maximum number of Snapshot copies that can be retained by the specified schedules must not exceed 254.
+
+. Click *OK*, and then click *Create*.
+//2021-12-07, created by Mairead sm-classic-rework
