--- a/online-help-96-97/task_setting_up_peering.adoc
+++ b/online-help-96-97/task_setting_up_peering.adoc
@@ -58,10 +58,6 @@ Firewalls and the intercluster firewall policy must allow the following protocol
 
 The default `intercluster` firewall policy allows access through the HTTPS protocol and from all IP addresses (0.0.0.0/0). You can modify or replace the policy if necessary.
 
-*Related information*
-
-https://docs.netapp.com/ontap-9/index.jsp[ONTAP 9 Documentation Center]
-
 == Create intercluster LIFs
 
 Creating intercluster logical interfaces (LIFs) enables the cluster network to communicate with a node. You must create an intercluster LIF within each IPspace that will be used for peering, on each node in each cluster for which you want to create a peer relationship.
@@ -211,4 +207,4 @@ You can use a passphrase to authorize peering requests. You can use a custom pas
 * If you are using a system-generated passphrase for cluster peering, after you enter the passphrase in the initiator cluster, peering is authorized automatically.
 * If you are using a custom passphrase for cluster peering, you have to navigate to the remote cluster to complete the peering process.
 
-// 2021-12-07, Created by Aoife
+// 2021-12-07, Created by Aoife sm-classic rework
