--- a/online-help-96-97/task_setting_up_saml_authentication.adoc
+++ b/online-help-96-97/task_setting_up_saml_authentication.adoc
@@ -9,11 +9,13 @@ summary: "You can set up Security Assertion Markup Language (SAML) authenticatio
 :imagesdir: ../media/
 
 [.lead]
-You can set up Security Assertion Markup Language (SAML) authentication so that remote users are authenticated through a secure identity provider (IdP) before they log in to System Manager. You can use System Manager to configure Security Assertion Markup Language (SAML) authentication so that remote users can log in by using a secure identity provider (IdP). You can disable Security Assertion Markup Language (SAML) authentication if you want to disable remote access to System Manager, or to edit the SAML configuration.
+You can set up Security Assertion Markup Language (SAML) authentication so that remote users are authenticated through a secure identity provider (IdP) before they log in to System Manager.
 
 image::../media/mfa_workflow.gif[]
 
 == Enable SAML authentication
+
+You can use System Manager to configure Security Assertion Markup Language (SAML) authentication so that remote users can log in by using a secure identity provider (IdP).
 
 .Before you begin
 
@@ -59,11 +61,9 @@ The IdP login window is displayed.
 +
 After the IdP is configured, if the user tries to log in by using the fully qualified domain name (FQDN), IPv6, or a cluster management LIF, then the system automatically changes the IP address to the IP address of the host system that was specified during the IdP configuration.
 
-*Related information*
-
-xref:task_accessing_cluster_by_using_system_manager_brower_based_gui.adoc[Accessing a cluster by using the ONTAP System Manager browser-based graphic interface]
-
 == Disable SAML authentication
+
+ You can disable Security Assertion Markup Language (SAML) authentication if you want to disable remote access to System Manager, or to edit the SAML configuration.
 
 .About this task
 
@@ -83,4 +83,4 @@ System Manager restarts.
 
 xref:task_accessing_cluster_by_using_system_manager_brower_based_gui.adoc[Accessing a cluster by using the ONTAP System Manager browser-based graphic interface]
 
-// 2021-12-07, Created by Aoife
+// 2021-12-07, Created by Aoife sm-classic rework
