--- a/nfs-config/index.adoc
+++ b/nfs-config/index.adoc
@@ -2,14 +2,14 @@
 permalink: nfs-config/index.html
 sidebar: sidebar
 keywords: nfs, access, volume, exist, storage, virtual, machine, svm, system manager classic
-summary: "This content describes how to quickly set up NFS access to a new volume on either a new or existing storage virtual machine (SVM) using the ONTAP System Manager classic interface, which is available with ONTAP 9.7 and earlier ONTAP 9 releases."
+summary: "You can quickly set up NFS access to a new volume on either a new or existing storage virtual machine (SVM) using the ONTAP System Manager classic interface, which is available with ONTAP 9.7 and earlier ONTAP 9 releases."
 ---
 = NFS configuration overview
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-This content describes how to quickly set up NFS access to a new volume on either a new or existing storage virtual machine (SVM) using the ONTAP System Manager classic interface, which is available with ONTAP 9.7 and earlier ONTAP 9 releases.
+You can quickly set up NFS access to a new volume on either a new or existing storage virtual machine (SVM) using the ONTAP System Manager classic interface, which is available with ONTAP 9.7 and earlier ONTAP 9 releases.
 
 Use this content if you want to configure access to a volume in the following way:
 
@@ -29,3 +29,5 @@ If your data network is flat, using these default objects ensures that LIFs will
 | The redesigned System Manager (available with ONTAP 9.7 and later) | link:https://docs.netapp.com/us-en/ontap/task_nas_provision_linux_nfs.html[Provision NAS storage for Linux servers using NFS^]
 | The ONTAP command line interface | link:https://docs.netapp.com/us-en/ontap/nfs-config/index.html[NFS configuration overview with the CLI^]
 |===
+
+// 2021-12-09, BURT 1419119
