--- a/iscsi-config-rhel/index.adoc
+++ b/iscsi-config-rhel/index.adoc
@@ -9,15 +9,9 @@ summary: "This content describes how to quickly set up the iSCSI service on a st
 :imagesdir: ../media/
 
 [.lead]
-This content describes how to quickly set up the iSCSI service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an iSCSI initiator on a Red Hat Enterprise Linux server.
+You can quickly set up the iSCSI service on a storage virtual machine (SVM), provision a LUN, and make the LUN available on a Red Hat Enterprise Linux server using the ONTAP System Manager classic interface (ONTAP 9.7 and earlier).
 
 This content is based on the following assumptions:
-
-* You want to use best practices, not explore every available option.
-* You do not want to read a lot of conceptual background.
-* You want to use the _Classic_ System Manager UI for ONTAP 9.7 and earlier releases, not the ONTAP System Manager UI for ONTAP 9.7 and later.
-+
-https://docs.netapp.com/us-en/ontap/[ONTAP System Manager documentation^]
 
 * You are using the iSCSI software initiator on a Red Hat Enterprise Linux host running a supported version of RHEL Series 6.4 or higher.
 * Your network uses IPv4 addressing.
@@ -27,8 +21,11 @@ https://docs.netapp.com/us-en/ontap/[ONTAP System Manager documentation^]
  ** Manually, using an address that will be added to an existing subnet
 * You are not configuring iSCSI SAN boot.
 
-If these assumptions are not correct for your situation, you should see the following resources:
+[cols=2*, options=header]
+|===
+a| *To complete this task using...* a| *See this content...*
+| The redesigned System Manager (available with 9.7 and later) | https://docs.netapp.com/us-en/ontap/task_san_provision_linux.html[Provision SAN storage for Linux servers]
+| The ONTAP command line interface (CLI) | https://docs.netapp.com/us-en/ontap/san-admin/lun-setup-workflow-concept.html[LUN setup workflow with the CLI]
+|===
 
-* https://docs.netapp.com/us-en/ontap/san-admin/index.html[SAN administration^]
-* https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration^]
-* https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation^]
+For more information on how to configure your specific host with ONTAP, see https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration]. 
