--- a/nfs-config/index.adoc
+++ b/nfs-config/index.adoc
@@ -2,16 +2,16 @@
 permalink: nfs-config/index.html
 sidebar: sidebar
 keywords: nfs, access, volume, exist, storage, virtual, machine, svm, system manager classic
-summary: "You can quickly set up NFS access to a new volume on either a new or existing storage virtual machine (SVM) using the ONTAP System Manager classic interface, which is available with ONTAP 9.7 and earlier ONTAP 9 releases."
+summary: "You can quickly set up NFS access to a new volume on either a new or existing storage virtual machine (SVM) using the ONTAP System Manager classic interface (ONTAP 9.7 and earlier)."
 ---
 = NFS configuration overview
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can quickly set up NFS access to a new volume on either a new or existing storage virtual machine (SVM) using the ONTAP System Manager classic interface, which is available with ONTAP 9.7 and earlier ONTAP 9 releases.
+You can quickly set up NFS access to a new volume on either a new or existing storage virtual machine (SVM) using the ONTAP System Manager classic interface (ONTAP 9.7 and earlier).
 
-Use this content if you want to configure access to a volume in the following way:
+Use this procedure if you want to configure access to a volume in the following way:
 
 * NFS access will be through NFSv3, not NFSv4 or NFSv4.1.
 * You want to use best practices, not explore every available option.
@@ -20,6 +20,9 @@ Use this content if you want to configure access to a volume in the following wa
 If your data network is flat, using these default objects ensures that LIFs will fail over correctly in the event of a link failure. If you are not using the default objects, you should refer to https://docs.netapp.com/us-en/ontap/networking/index.html[Network Management Documentation^] for information on how to configure LIF path failover.
 * UNIX file permissions will be used to secure the new volume.
 * LDAP, if used, is provided by Active Directory.
+
+If you want details about the range of ONTAP NFS protocol capabilities, consult the link:../nfs-admin/index.html[NFS reference overview].
+
 
 == Other ways to do this in ONTAP
 
