--- a/fc-config-rhel/index.adoc
+++ b/fc-config-rhel/index.adoc
@@ -1,7 +1,7 @@
 ---
 permalink: fc-config-rhel/index.html
 sidebar: sidebar
-keywords: quick, set, up, fc, service, storage, virtual, machine, svm, provision, lun, fc, host, bus, adapter, hba, red, hat, enterprise, linux, server, configuration
+keywords: fc, service, storage, virtual, machine, svm, provision, lun, fc, host, bus, adapter, hba, linux, server, configuration, red hat enterprise linux
 summary: "This content describes how to quickly set up the FC service on a storage virtual machine, provision a LUN, and make the LUN available using an FC host bus adapter on a Red Hat Enterprise Linux server."
 ---
 = FC configuration for Red Hat Enterprise Linux overview
@@ -9,20 +9,13 @@ summary: "This content describes how to quickly set up the FC service on a stora
 :imagesdir: ../media/
 
 [.lead]
-This content describes how to quickly set up the FC service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an FC host bus adapter (HBA) on a Red Hat Enterprise Linux server.
+You can quickly set up the FC service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an FC host bus adapter (HBA) on a Red Hat Enterprise Linux server the ONTAP System Manager classic interface (ONTAP 9.7 and earlier)..
 
-This content is based on the following assumptions:
-
-* You want to use best practices, not explore every available option.
-* You do not want to read a lot of conceptual background.
-* You want to use the _Classic_ System Manager UI for ONTAP 9.7 and earlier releases, not the ONTAP System Manager UI for ONTAP 9.7 and later.
-+
-https://docs.netapp.com/us-en/ontap/[ONTAP System Manager documentation^]
-
+Use this procedure to set up FC service on an SVM if:
 * The host is running a supported version of Red Hat Enterprise Linux 6.4 or later.
 * You are using traditional FC HBAs and switches.
 +
-This content does not cover Fibre Channel over Ethernet (FCoE).
+NOTE: Fibre Channel over Ethernet (FCoE) is not covered in this procedure.
 
 * You have at least two FC target ports available on each node in the cluster.
 +
@@ -35,3 +28,13 @@ If these assumptions are not correct for your situation, you should see the foll
 * https://docs.netapp.com/us-en/ontap/san-admin/index.html[SAN administration^]
 * https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration^]
 * https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation^]
+
+== Other ways to do this in ONTAP
+[cols=2,options="header"]
+|===
+| To perform these tasks with... | See this content...
+| The redesigned System Manager (available with ONTAP 9.7 and later) | link:https://docs.netapp.com/us-en/ontap/task_san_provision_linux.html[Provision SAN storage for Linux servers^]
+| The ONTAP command line interface (CLI) | link:https://docs.netapp.com/us-en/ontap/san-admin/lun-setup-workflow-concept.html[LUN setup workflow with the CLI^]
+|===
+
+// 17-dec-2021: BURT 1416961
