--- a/fc-config-rhel/index.adoc
+++ b/fc-config-rhel/index.adoc
@@ -9,7 +9,7 @@ summary: "This content describes how to quickly set up the FC service on a stora
 :imagesdir: ../media/
 
 [.lead]
-You can quickly set up the FC service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an FC host bus adapter (HBA) on a Red Hat Enterprise Linux server the ONTAP System Manager classic interface (ONTAP 9.7 and earlier)..
+You can quickly set up the FC service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an FC host bus adapter (HBA) on a Red Hat Enterprise Linux server using the ONTAP System Manager classic interface (ONTAP 9.7 and earlier).
 
 Use this procedure to set up FC service on an SVM if:
 * The host is running a supported version of Red Hat Enterprise Linux 6.4 or later.
