--- a/fc-config-windows/index.adoc
+++ b/fc-config-windows/index.adoc
@@ -9,20 +9,13 @@ summary: "This content describes how to quickly set up the FC service on a stora
 :imagesdir: ../media/
 
 [.lead]
-This content describes how to quickly set up the FC service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an FC HBA on a Windows host computer.
+You can set up the FC service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an FC HBA on a Windows host computer with the ONTAP System Manager classic interface (ONTAP 9.7 and earlier).
 
-This content is based on the following assumptions:
-
-* You want to use best practices, not explore every available option.
-* You do not want to read a lot of conceptual background.
-* You want to use the _Classic_ System Manager UI for ONTAP 9.7 and earlier releases, not the ONTAP System Manager UI for ONTAP 9.7 and later.
-+
-https://docs.netapp.com/us-en/ontap/[ONTAP System Manager documentation^]
-
+Use this procedure to set up FC service on an SVM if:
 * You are using traditional FC HBAs and switches.
 +
-This content does not cover FCoE.
 
+This procedure does not covers situations where:
 * You have at least two FC target ports available on each node in the cluster.
 +
 Onboard FC and UTA2 (also called `CNA`) ports, as well as some adapters are configurable. Configuring those ports is done in the ONTAP CLI and is not covered in this content.
@@ -30,8 +23,15 @@ Onboard FC and UTA2 (also called `CNA`) ports, as well as some adapters are conf
 * You are not configuring FC SAN boot.
 * You are not using virtual Fibre Channel (VFC) with Hyper-V or ESX guests.
 
-If these assumptions are not correct for your situation, you should see the following resources:
+== Other ways to do this in ONTAP
+[cols=2,options="header"]
+|===
+| To perform these tasks with... | See this content...
+| The redesigned System Manager (available with ONTAP 9.7 and later) | link:https://docs.netapp.com/us-en/ontap/task_san_provision_windows.html[Provision SAN storage for Windows servers^]
+| The ONTAP command line interface (CLI) | link:https://docs.netapp.com/us-en/ontap/san-admin/lun-setup-workflow-concept.html[LUN setup workflow with the CLI^]
+|===
 
-* https://docs.netapp.com/us-en/ontap/san-admin/index.html[SAN administration^]
-* https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration^]
+*Additional Resources*
 * https://docs.netapp.com/us-en/ontap-sanhost/index.html[NetApp Documentation: Host Utilities^]
+
+// 17 dec 2021: burt 1416427 
