--- a/online-help-96-97/task_adding_home_directory_paths.adoc
+++ b/online-help-96-97/task_adding_home_directory_paths.adoc
@@ -1,7 +1,7 @@
 ---
 permalink: online-help-96-97/task_adding_home_directory_paths.html
 sidebar: sidebar
-keywords: cifs, system, manager, online, help, storage
+keywords: cifs, system, manager, online, help, storage, add , delete, home, directory
 summary: "You can use System Manager to specify one or more paths that can be used by the storage system to resolve the location of the CIFS home directories of users."
 ---
 = Add home directory paths
@@ -19,6 +19,19 @@ You can use System Manager to specify one or more paths that can be used by the 
 . In the *Manage Home Directories* dialog box, specify the paths that are to be used by the storage system to search for the CIFS home directories of users.
 . Click *Add*, and then click *Save and Close*.
 
+== Delete home directory paths
+
+You can use System Manager to delete a home directory path when you do not want the storage system to use the path to resolve the location of the CIFS home directories of users.
+
+.Steps
+
+. Click *Storage* > *SVMs*.
+. Select the SVM, and then click *SVM Settings*.
+. In the *Home Directories* area of the *Configuration* tab, click *Manage*.
+. In the *Manage Home Directories* dialog box, select the home directory path that you want to delete, and then click *Delete*.
+. Click *Save and Close*.
+
 *Related information*
 
-xref:reference_cifs_window.adoc[CIFS window]
+
+// 2021-12-20, Created by Aoife, sm-classic-rework
