--- a/fc-config-windows/index.adoc
+++ b/fc-config-windows/index.adoc
@@ -1,7 +1,7 @@
 ---
 permalink: fc-config-windows/index.html
 sidebar: sidebar
-keywords: describe, fc, service, storage, virtual, machine, svm, provision, lun, fc, hba, windows, host, computer
+keywords: describe, fc, service, storage virtual machine, svm, provision, lun, hba, windows, host
 summary: "This content describes how to quickly set up the FC service on a storage virtual machine, provision a LUN, and make the LUN available using an FC HBA on a Windows host computer."
 ---
 = FC configuration for Windows overview
