--- a/fc-config-rhel/index.adoc
+++ b/fc-config-rhel/index.adoc
@@ -7,20 +7,19 @@ summary: "This content describes how to quickly set up the FC service on a stora
 = FC configuration for Red Hat Enterprise Linux overview
 :icons: font
 :imagesdir: ../media/
+:hardbreaks-option:
 
 [.lead]
 You can quickly set up the FC service on a storage virtual machine (SVM), provision a LUN, and make the LUN available using an FC host bus adapter (HBA) on a Red Hat Enterprise Linux server using the ONTAP System Manager classic interface (ONTAP 9.7 and earlier).
 
 Use this procedure to set up FC service on an SVM if:
+
 * The host is running a supported version of Red Hat Enterprise Linux 6.4 or later.
 * You are using traditional FC HBAs and switches.
-+
-NOTE: Fibre Channel over Ethernet (FCoE) is not covered in this procedure.
-
+[NOTE]
+Fibre Channel over Ethernet (FCoE) is not covered in this procedure.
 * You have at least two FC target ports available on each node in the cluster.
-+
 Onboard FC and UTA2 (also called "`CNA`") ports, as well as some adapters, are configurable. Configuring those ports is done in the ONTAP command-line interface (CLI) and is not covered in this content.
-
 * You are not configuring FC SAN boot.
 
 If these assumptions are not correct for your situation, you should see the following resources:
