--- a/iscsi-config-rhel/task_installing_linux_unified_host_utilities_optimizing_i_o_performance.adoc
+++ b/iscsi-config-rhel/task_installing_linux_unified_host_utilities_optimizing_i_o_performance.adoc
@@ -25,5 +25,6 @@ http://mysupport.netapp.com/NOW/cgi-bin/software[NetApp Downloads: Software]
 . If the `tuned` package is not installed, enter the following command:``yum install tuned``
 . For a physical host, ensure that you have set the `enterprise-storage` profile: `tuned-adm profile enterprise-storage`
 . For a virtual host, ensure that you have set the `virtual-guest` profile: `tuned-adm profile virtual-guest`
-+
+
+*Related Information*
 https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation]
