--- a/online-help-96-97/concept_kerberos_interface_services.adoc
+++ b/online-help-96-97/concept_kerberos_interface_services.adoc
@@ -11,11 +11,8 @@ summary: "You can use System Manager to manage Kerberos interface services."
 [.lead]
 You can use System Manager to manage Kerberos interface services.
 
-= Editing Kerberos configuration
-:icons: font
-:imagesdir: ../media/
+== Editing Kerberos configuration
 
-[.lead]
 You can use System Manager to enable Kerberos and to edit a Kerberos configuration that is associated with a storage virtual machine (SVM),which enables the SVM to use Kerberos security services for NFS.
 
 .Before you begin
@@ -42,14 +39,11 @@ If you are using Microsoft Active Directory Kerberos, the first 15 characters of
 . In the *Kerberos Interface* window, select the interface, and then click *Edit*.
 . In the *Edit Kerberos Configuration* dialog box, make the required changes, and then click *OK*.
 
-= Kerberos Interface window
-:icons: font
-:imagesdir: ../media/
+== Kerberos Interface window
 
-[.lead]
 You can use the Kerberos Interface window to enable Kerberos and to edit the Kerberos configuration for storage virtual machines (SVMs).
 
-== Command buttons
+=== Command buttons
 
 * *Edit*
 +
@@ -59,7 +53,7 @@ Opens the Edit Kerberos Configuration dialog box, which you can use to enable Ke
 +
 Updates the information in the window.
 
-== Kerberos Interface list
+=== Kerberos Interface list
 
 Provides details about the Kerberos configuration.
 
