--- a/online-help-96-97/concept_ldap_configuration_services.adoc
+++ b/online-help-96-97/concept_ldap_configuration_services.adoc
@@ -11,7 +11,7 @@ summary: "You can use System Manager to manage LDAP configurations."
 [.lead]
 You can use System Manager to manage LDAP configurations.
 
-= Edit active LDAP clients
+== Edit active LDAP clients
 
 You can use System Manager to associate an active LDAP client with a storage virtual machine (SVM), which enables you to use LDAP as a name service or for name mapping.
 
