--- a/online-help-96-97/concept_subnets.adoc
+++ b/online-help-96-97/concept_subnets.adoc
@@ -11,7 +11,7 @@ summary: "You can use System Manager to manage subnets."
 [.lead]
 You can use System Manager to manage subnets.
 
-== Editing subnet settings
+== Edit subnet settings
 
 [.lead]
 You can use System Manager to modify subnet attributes such as the name, subnet address, range of IP addresses, and gateway address of the subnet.
@@ -37,7 +37,7 @@ You can modify the subnet even when the LIF in that subnet is still in use.
 . Click *Save and Close*.
 
 
-== Deleting subnets
+== Delete subnets
 
 You can use System Manager to delete a subnet when you no longer require the subnet and you want to reallocate the IP addresses that were assigned to the subnet.
 
