--- a/online-help-96-97/task_setting_up_saml_authentication.adoc
+++ b/online-help-96-97/task_setting_up_saml_authentication.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: set, up, saml, authentication, security, assertion, markup, idp, online, help, system, manager,  language, secure, identity, provide,
 summary: "You can set up Security Assertion Markup Language (SAML) authentication so that remote users are authenticated through a secure identity provider (IdP) before they log in to System Manager."
 ---
-= Setting up SAML authentication
+= Set up SAML authentication
 :icons: font
 :imagesdir: ../media/
 
